--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         </div>
         <div class="row my-5">
             <h2>Contact</h2>
-            <p>お問い合わせは <a href="#">sample@sample.com</a> にお送りください。</p>
+            <p>お問い合わせは <a href="#">tachigawa_nero@coc.tea.jp</a> にお送りください。</p>
         </div>
     </div>
 </main>
 <footer class="py-3 fixed-bottom bg-body-tertiary">
   <div class="text-center">
-    <span class="text-body-secondary">© Sample Site</span>
+    <span class="text-body-secondary">クトゥルフ神話TRPG非公式シナリオ クラムボンの返報で使用するものです。
+学校名は架空のものです。実在の団体や法人と一切の関係はありません。</span>
   </div>
 </footer>
 </body>
