--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <main>
     <div class="container mt-5 py-5">
         <div class="p-4 rounded bg-body-secondary">
-            <h1 class="display-5 fst-italic">Welcome to Sample Site</h1>
-            <p class="lead mt-5">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p class="lead">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-            <p class="lead"><a href="about.html">さらに詳しく</a></p>        
+            <h1 class="display-5 fst-italic">日谷総合大学天文学部 公式HP Site</h1>
+            <p class="lead mt-5">日谷総合大学内の学部、天文学部の公式ホームページです。</p>
+            <p class="lead">日々の研究データや、創設以来の観測資料を管理者である立川 根路の気分で公開しています。</p>
+            <p class="lead"><a href="about.html">【New】土星と月の接近について【観測日和】</a></p>        
         </div>
         <div class="row my-5">
             <h2>Contact</h2>
