--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </main>
 <footer class="py-3 fixed-bottom bg-body-tertiary">
   <div class="text-center">
-    <span class="text-body-secondary">クトゥルフ神話TRPG非公式シナリオ クラムボンの返報で使用するものです。
-学校名は架空のものです。実在の団体や法人と一切の関係はありません。</span>
+    <span class="text-body-secondary">クトゥルフ神話TRPG非公式シナリオ クラムボンの返報で使用するものです。実在の団体や法人と一切の関係はありません。</span>
   </div>
 </footer>
 </body>
