--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>
-            ここがh1だよ
+            ※最古のデータ(1965年～)のもののみ記載※
         </h1>
         <p>
 ①1967/09/22~1967/09/29　下弦の月~三十日月
