--- a/saturn-moon.html
+++ b/saturn-moon.html
@@ -8,18 +8,17 @@
         <h1>
             ※最古のデータ(1965年～)のもののみ記載※
         </h1>
-        <p>
-①1967/09/22~1967/09/29　下弦の月~三十日月
-②1972/05/15~1972/05/22　満月~下弦の月
-③1980/02/13~1980/02/20　十三夜月~更待月
-④1982/06/01~1982/06/08　朔~上弦の月
-⑤1991/01/15~1991/01/22　満月~下弦の月
-⑥1992/11/04~1992/11/11　三日月~十三夜月
-⑦2000/07/02~2000/07/09　朔~上弦の月
-⑧2006/05/29~2006/06/05　三十日月~三日月
-⑨2013/03/14~2013/03/21　満月~下弦の月
-⑨2021/10/20~2021/10/27　更待月~有明の月
-⑩2024/04/15~2024/04/22　満月~下弦の月
+        <p>①1967/09/22~1967/09/29　下弦の月~三十日月</p>
+        <p>②1972/05/15~1972/05/22　満月~下弦の月</p>
+        <p>③1980/02/13~1980/02/20　十三夜月~更待月</p>
+        <p>④1982/06/01~1982/06/08　朔~上弦の月</p>
+        <p>⑤1991/01/15~1991/01/22　満月~下弦の月</p>
+        <p>⑥1992/11/04~1992/11/11　三日月~十三夜月</p>
+        <p>⑦2000/07/02~2000/07/09　朔~上弦の月</p>
+        <p>⑧2006/05/29~2006/06/05　三十日月~三日月</p>
+        <p>⑨2013/03/14~2013/03/21　満月~下弦の月</p>
+        <p>⑨2021/10/20~2021/10/27　更待月~有明の月</p>
+        <p>⑩2024/04/15~2024/04/22　満月~下弦の月
         </p>
     </body>
 </html>
