--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="container mt-5 py-5">
         <div class="p-4 rounded bg-body-secondary">
             <h1 class="display-5 fst-italic">日谷総合大学天文学部 公式HP Site</h1>
-            <p class="lead mt-5">日谷総合大学内の学部、天文学部の公式ホームページです。</p>
-            <p class="lead">日々の研究データや、創設以来の観測資料を管理者である立川 根路の気分で公開しています。</p>
+            <p class="lead mt-5">日谷総合大学内の学部、天文学部の公式ホームページです。5秒で作りました。</p>
+            <p class="lead">日々の研究データや、創設以来の観測資料を管理者である私…立川 根路の気分で公開しています。</p>
             <p class="lead"><a href="saturn-moon.html">【New】土星と月の接近について【観測日和】</a></p>        
         </div>
         <div class="row my-5">
