--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Sample Site</a>
+            <a class="navbar-brand" href="index.html">Hidani University Official Astronomy</a>
         </div>
     </nav>
 </header>
