--- a/saturn-moon.html
+++ b/saturn-moon.html
@@ -8,6 +8,8 @@
         <h1>
             ※最古のデータ(1965年～)のもののみ記載※
         </h1>
+        <p>YYYY/MM/DD~YYYY/MM/DD  月種~月種</p>
+        <p>＝＝＝</p>
         <p>①1967/09/22~1967/09/29　下弦の月~三十日月</p>
         <p>②1972/05/15~1972/05/22　満月~下弦の月</p>
         <p>③1980/02/13~1980/02/20　十三夜月~更待月</p>
