--- a/saturn-moon.html
+++ b/saturn-moon.html
@@ -6,9 +6,10 @@
     </head>
     <body>
         <h1>
-            ※最古のデータ(1965年～)のもののみ記載※
+            【New】土星と月の接近について【観測日和】
         </h1>
         <p>YYYY/MM/DD~YYYY/MM/DD  月種~月種</p>
+        <p>※最古のデータ(1965年～)のもののみ記載※</p>
         <p>＝＝＝</p>
         <p>①1967/09/22~1967/09/29　下弦の月~三十日月</p>
         <p>②1972/05/15~1972/05/22　満月~下弦の月</p>
