--- a/home.html
+++ b/home.html
@@ -22,7 +22,8 @@
             <h1 class="display-5 fst-italic">ようこそ！ 日谷総合大学天文学部 公式HPへ！</h1>
             <p class="lead mt-5">日谷総合大学内の学部、天文学部の公式ホームページです。5秒で作りました。</p>
             <p class="lead">日々の研究データや、創設以来の観測資料を管理者である私…立川 根路の気分で公開しています。</p>
-            <p class="lead"><a href="saturn-moon.html">【New】土星と月の接近について【観測日和】</a></p>        
+            <p class="lead"><a href="saturn-moon.html">【観測日和】土星と月の接近について【New】</a></p> 
+            <p class="lead"><a href="intro-of-me.html">【Column】ここはどこ？私は誰？</a></p> 
         </div>
         <div class="row my-5">
             <h2>Contact</h2>
