Update and rename test to intro-of-me.html

--- a/intro-of-me.html
+++ b/intro-of-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "ja">
     <head>
-        <title>テストの文章だよ～</title>
+        <title>【Column】ここはどこ？私は誰？</title>
         <meta charset="UTF-8">
     </head>
     <body>
