--- a/intro-of-me.html
+++ b/intro-of-me.html
@@ -6,11 +6,21 @@
     </head>
     <body>
         <h1>
-            ここがh1だよ
+            【Column】ここはどこ？私は誰？
         </h1>
         <p>
-            ここは
-            普通に改行できる
+            どうも！初めまして！あるいはお久しぶり！</p>
+        <p>ここは日谷総合大学天文学部のホームページだよ！</p>
+        <p>ちょっと私には君の名前が分からないけど、少なくとも私は立川 根路(たちがわ ねろ)だよ！</p>
+        <p>日谷総合大学天文学部で准教授をやっているよ！たま～にH県の某市とかにも行ってるよ！</p>
+        <p>けど基本的に研究所にいるからね！いつでも誰でも遊びに来ていいからね！</p>
+        <p>ホームページとか初めて作ったよ！絶対任せる人間違えてるよね！私ド素人なのに！</p>
+        <p>だからこれ、ほとんど別サイトのコピペだけで作ってるよ！記事執筆者様ありがとうございます！</p>
+        <p>研究成果としては…おうし座やら土星やら月やらに関するものが多いよ！</p>
+        <p>あとなんかオカルティックな研究にも付き合うよ！暇だし！</p>
+        <p>コトリバコだろうが魔導書だろうが遠慮せず持ってきてね！一緒にツンツンするよ！</p>
+        <p>じゃ、そんな感じで！詳しいことは直接会って聞いてね！歓迎するよ！</p>
+            
         </p>
     </body>
 </html>
